fixed overflow

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  overflow-x: hidden;
   font-family: sans-serif;
   background-color: rgb(247, 247, 176);
 }
